--- a/PROJET STAR/index.html
+++ b/PROJET STAR/index.html
@@ -10,17 +10,17 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#" class="accueil"><img src="images/icones/zeri logo (1).png" ></a></li>
+            <li><a href="#" class="accueil"><img src="images/icones/zeri logo (1)(3).png" ></a></li>
             <li><a href="#" class="option"><img src="images/icones/logo je ne sais pas.png"></a></li>
-            <li><a href="#" class="option"><img src="images/icones/logo personnage 2.png"></a></li>
+            <li><a href="#" class="option"><img src="images/icones/logo personnage 2.png" class="navIconHeader"></a></li>
             <li><a href="#" class="option"><img src="images/icones/logo_carte(1).png"></a></li>
         </ul>
     </nav>
     <p>fvbdun,epl^s</p>
     <div>
-        <img src="fond etoile 2.png" class="news2">
-        <img src="fond etoile.png" class="news">
-        <img src="fond noir.png" class="news3">
+        <img src="images/fonds/fond etoile 2.png" class="news2">
+        <img src="images/fonds/fond etoile.png" class="news">
+        <img src="images/fonds/fond noir.png" class="news3">
     </div>
     
     <p>fvbdun,epl^s</p>
