--- a/PROJET STAR/index.html
+++ b/PROJET STAR/index.html
@@ -46,15 +46,43 @@
                   </ul>
             </div>
         </div>
-        <div class="articles">
+        <div class="news1">
             <a href="#">
                 <div>
                     <img class="newArticlesImg"src="style/news_1.jpg" alt="">
                 </div>
                 <div class="newArticlesContent">
-                    <h2>Bonjour</h2>
-                    <span>sdefgyhujikgyftdrsedrftgyhujihugyftd
-                        dfyguhijoksjihug
+                    <h2 class="titre">titre</h2>
+                    <span class="textenews">
+                        texte de la news
+                    </span>
+
+                </div>
+            </a>
+        </div>
+        <div class="news">
+            <a href="#">
+                <div>
+                    <img class="newArticlesImg"src="style/news_1.jpg" alt="">
+                </div>
+                <div class="newArticlesContent">
+                    <h2 class="titre">titre</h2>
+                    <span class="textenews">  
+                        texte de la news
+                    </span>
+
+                </div>
+            </a>
+        </div>
+        <div class="news2">
+            <a href="#">
+                <div>
+                    <img class="newArticlesImg"src="style/news_1.jpg" alt="">
+                </div>
+                <div class="newArticlesContent">
+                    <h2 class="titre">titre</h2>
+                    <span class="textenews">
+                        texte de la news
                     </span>
 
                 </div>
