--- a/PROJET STAR/html/senna.html
+++ b/PROJET STAR/html/senna.html
@@ -13,7 +13,7 @@
     <title>Senna</title>
 </head>
 <body>
-    <a href="#" class="carte"><img src="../images/icones/logo je ne sais pas.png" class="poutre"></a>
+    <a href="../html/z_news.html" class="carte"><img src="../images/icones/logo je ne sais pas.png" class="poutre"></a>
     <div class="icon-bar">
         <div class="logo">
             <a href="../index.html"><img src="../images/icones/logo_league of star.png" ></a>
@@ -121,8 +121,8 @@
             <p>This website is created by fans to help new players learn about various things.</p>
             <ul class="socials">
               <li><a href="https://www.youtube.com/channel/UChjlVLg-DujzkzUrCIhfZrg"><i class="fab fa-youtube"></i></a></li>
-              <li><a href="#"><i class="fab fa-github"></i></a></li>
-              <li><a href="#"><i class="fab fa-discord"></i></a></li>
+              <li><a href="https://github.com/titan1g/CRETTEUR_IAFRATE_PROJET_WEB"><i class="fab fa-github"></i></a></li>
+              <li><a href="https://discord.gg/yqVpcxT6"><i class="fab fa-discord"></i></a></li>
             </ul>
           </div>
           
