--- a/PROJET STAR/index.html
+++ b/PROJET STAR/index.html
@@ -51,49 +51,52 @@
             </div>
         </div>
         <div class="news1">
-            <a href="#">
+            <a href="https://merch.riotgames.com/fr-fr/product/sett-unlocked/">
                 <div>
-                    <img class="newArticlesImg" src="images/news/news_1.jpg">
+                    <img class="newArticlesImg" src="images/news/actu1.jpg">
                 </div>
                 <div class="newArticlesContent">
-                    <h2 class="titre">titre</h2>
+                    <h2 class="titre">Voilà le patron !</h2>
                     <span class="textenews">
-                        texte de la news
+                        Juste à temps pour les fêtes, ne ratez pas cette chance d'ajouter Sett Unlocked à votre collection !
                     </span>
 
                 </div>
             </a>
         </div>
         <div class="news">
-            <a href="#">
+            <a href="https://www.youtube.com/watch?v=GJLHlBRqKAI">
                 <div>
-                    <img class="newArticlesImg" src="images/news/news_2.jpg" >
+                    <img class="newArticlesImg" src="images/news/actu2.jpg" >
                 </div>
                 <div class="newArticlesContent">
-                    <h2 class="titre">titre</h2>
+                    <h2 class="titre">Elus de l'hiver 2022 | Musique des skins officiels</h2>
                     <span class="textenews">  
-                        texte de la news
+                        Baladez-vous à travers les paysages enneigés avec la musique officielle des skins Elus de l'hiver 2022
                     </span>
 
                 </div>
             </a>
         </div>
         <div class="news2">
-            <a href="#">
+            <a href="https://www.youtube.com/watch?v=Zvo6MjAduhE">
                 <div>
-                    <img class="newArticlesImg" src="images/news/news_3.jpg" >
+                    <img class="newArticlesImg" src="images/news/actu3.jpg" >
                 </div>
                 <div class="newArticlesContent">
-                    <h2 class="titre">titre</h2>
+                    <h2 class="titre">Bande-annonce de l'évènement Elus de l'hiver 2022</h2>
                     <span class="textenews">
-                        texte de la news
+                        Les premières neiges tombent sur Runeterra et la saison de Polaris débute.
                     </span>
 
                 </div>
             </a>
         </div>
 
-
+        <img src="images/fonds/parchemin.png" class="parchemin3">
+        <img src="images/personnage corps/zeri.png" class="eclairzeri">
+        <h1 class="etoilemontante">NOTRE PETITE FAVORITE...</h1>
+        <strong><a href="html/zeri.html" class="zeri22"> ZERI</a></strong>
         <img src="images/fonds/arbre5.png" class="arbre">
 
         <footer>
