--- a/PROJET WEB/index.html
+++ b/PROJET WEB/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style/news.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/footer.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,500" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
@@ -25,7 +26,7 @@
             <ul class="mainmenu">
               <li><input type="checkbox" id="products">
             
-                <label for="products" class="content"><img src="images/icones/logo personnage 2.png" class="trait"></label>
+                <label for="products" class="content"><img src="images/icones/silhouette.png" class="trait"></label>
                 <ul class="submenu" >
                   <a href="html/akshan.html"><img src="images/personnage tête/akshan.png" class="Akshan" title="Akshan" ></a>
                   <a href="html/aphelios.html"><img src="images/personnage tête/aphelios.png" class="Aphelios" title="Aphelios"></a>
@@ -50,6 +51,8 @@
                 </ul>
             </div>
         </div>
+        <p class="newsrecentes">NEWS RECENTES</p>
+        <img src="images/news/trait-de-séparation-png-1.png" class="separation">
         <div class="news1">
             <a href="https://merch.riotgames.com/fr-fr/product/sett-unlocked/">
                 <div>
