--- a/PROJET WEB/html/vex.html
+++ b/PROJET WEB/html/vex.html
@@ -13,7 +13,7 @@
     <title>Vex</title>
 </head>
 <body>
-    <a href="../html/z_news.html" class="carte"><img src="../images/icones/logo je ne sais pas.png" class="poutre"></a>
+    <a href="../html/z_news.html" class="carte"><img src="../images/icones/newsglobe.png" class="poutre"></a>
     <div class="icon-bar">
         <div class="logo">
             <a href="../index.html"><img src="../images/icones/logo_league of star.png" ></a>
@@ -24,7 +24,7 @@
             <ul class="mainmenu">
               <li><input type="checkbox" id="products">
             
-                <label for="products" class="content"><img src="../images/icones/logo personnage 2.png" class="trait"></label>
+                <label for="products" class="content"><img src="../images/icones/personnage.png" class="trait"></label>
                 <ul class="submenu" >
                   <a href="../html/akshan.html"><img src="../images/personnage tête/akshan.png" class="Akshan" title="Akshan" ></a>
                   <a href="../html/aphelios.html"><img src="../images/personnage tête/aphelios.png" class="Aphelios" title="Aphelios"></a>
