--- a/PROJET WEB/html/z_news.html
+++ b/PROJET WEB/html/z_news.html
@@ -87,7 +87,7 @@
                 <h2>
                   Bande-annonce de l'évènement Elus de l'hiver 
                 </h2>
-                <p>Les premières neiges tombent sur Runeterra,la saison de Polaris débute.</p>
+                <p class="art3b">Les premières neiges tombent sur Runeterra,la saison de Polaris débute.</p>
               </div>
             </a>
           </div>
@@ -167,7 +167,7 @@
           <h3>League of Star</h3>
           <p>This website is created by fans to help new players learn about various things.</p>
           <ul class="socials">
-            <li><a href="https://www.youtube.com/channel/UChjlVLg-DujzkzUrCIhfZrg"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="https://www.youtube.com/@leagueoflegends"><i class="fab fa-youtube"></i></a></li>
             <li><a href="https://github.com/titan1g/CRETTEUR_IAFRATE_PROJET_WEB"><i class="fab fa-github"></i></a></li>
             <li><a href="https://discord.gg/yqVpcxT6"><i class="fab fa-discord"></i></a></li>
           </ul>
