--- a/PROJET WEB/html/akshan.html
+++ b/PROJET WEB/html/akshan.html
@@ -54,6 +54,8 @@
         </div>
         
         <img src="../images/fonds/parchemin.png" class="parchemin">
+        <img src="../images/fonds/textbox.png" class="textbox">
+        <p class="personom-akshan">Akshan</p>
         <style>
           .slide-1 {
               background-image: url("../images/personnage\ corps/akshan.png");
@@ -68,7 +70,26 @@
           }
           
           .slide-4 {
-              background-image: url("../images/skin-lol/Akshan3.png");
+              background-image: url("../images/skin-lol/");
+          }
+          .btn:nth-of-type(1) {
+          left: 10%;
+          top: 93%;
+          }
+
+          .btn:nth-of-type(2) {
+          left: 17%;
+           top: 93%;
+          }
+
+          .btn:nth-of-type(3) {
+            left: 24%;
+            top: 93%;
+         }
+
+          .btn:nth-of-type(4) {
+              left: 31%;
+              top: 0%;
           }
               </style>
         <div class="container">
@@ -163,7 +184,7 @@
             <h3>League of Star</h3>
             <p>This website is created by fans to help new players learn about various things.</p>
             <ul class="socials">
-              <li><a href="https://www.youtube.com/channel/UChjlVLg-DujzkzUrCIhfZrg"><i class="fab fa-youtube"></i></a></li>
+              <li><a href="https://www.youtube.com/@leagueoflegends"><i class="fab fa-youtube"></i></a></li>
               <li><a href="https://github.com/titan1g/CRETTEUR_IAFRATE_PROJET_WEB"><i class="fab fa-github"></i></a></li>
               <li><a href="https://discord.gg/yqVpcxT6"><i class="fab fa-discord"></i></a></li>
             </ul>
