--- a/PROJET WEB/html/akshan.html
+++ b/PROJET WEB/html/akshan.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="../js/skinchara.js"></script>
     <link rel="stylesheet" href="../style/CharaSkin.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="../images/icons/logo_transparent.png" rel="icon">
     <title>Akshan</title>
 </head>
 <body>
