--- a/PROJET WEB/html/akshan.html
+++ b/PROJET WEB/html/akshan.html
@@ -18,7 +18,7 @@
     <a href="../html/z_news.html" class="carte"><img src="../images/icones/newsglobe.png" class="poutre"></a>
     <div class="icon-bar">
         <div class="logo">
-            <a href="../index.html"><img src="../images/icones/logo_league of star.png" ></a>
+          <a href="../index.html"><img src="../images/icones/logo_transparent.png" class="logo_general"></a>
             
         </div>
         
