--- a/PROJET WEB/html/z_news.html
+++ b/PROJET WEB/html/z_news.html
@@ -24,7 +24,7 @@
     <a href="../html/z_news.html" class="carte"><img src="../images/icones/newsglobe.png" class="poutre"></a>
     <div class="icon-bar">
         <div class="logo">
-            <a href="../index.html"><img src="../images/icones/logo_transparent.png" ></a>
+          <a href="../index.html"><img src="../images/icones/logo_transparent.png" class="logo_general"></a>
         </div>
         
     
