--- a/PROJET WEB/html/z_news.html
+++ b/PROJET WEB/html/z_news.html
@@ -134,7 +134,7 @@
               <div class="articlesImg6"></div>
               <div class="articlesContent">
                 <h2>
-                 Comming soon !
+                 coming soon !
                 </h2>
                 <p></p>
               </div>
@@ -147,7 +147,7 @@
               <div class="articlesImg7"></div>
               <div class="articlesContent">
                 <h2>
-                  Comming soon !
+                  coming soon !
                 </h2>
                 <p></p>
               </div>
@@ -160,7 +160,7 @@
               <div class="articlesImg8"></div>
               <div class="articlesContent">
                 <h2>
-                  Comming soon !
+                  coming soon !
                 </h2>
                 <p></p>
               </div>
